--- a/2.NeuralNetworks/Project1 - first-neural-network/Your_first_neural_network.ipynb
+++ b/2.NeuralNetworks/Project1 - first-neural-network/Your_first_neural_network.ipynb
@@ -908,7 +908,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -922,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
