--- a/3.ConvolutionalNetworks/aind2-cnn/transfer-learning/bottleneck_features.ipynb
+++ b/3.ConvolutionalNetworks/aind2-cnn/transfer-learning/bottleneck_features.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Artificial Intelligence Nanodegree\n",
     "\n",
@@ -23,17 +20,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "/home/udacity/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n",
+      "/home/udacity/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
      ]
     },
     {
@@ -72,10 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### 2. Recap How to Import VGG-16\n",
     "\n",
@@ -87,16 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
+      "553467904/553467096 [==============================] - 40s 0us/step\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -146,9 +138,9 @@
       "_________________________________________________________________\n",
       "predictions (Dense)          (None, 1000)              4097000   \n",
       "=================================================================\n",
-      "Total params: 138,357,544.0\n",
-      "Trainable params: 138,357,544.0\n",
-      "Non-trainable params: 0.0\n",
+      "Total params: 138,357,544\n",
+      "Trainable params: 138,357,544\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -161,10 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "For this network, `model.predict` returns a 1000-dimensional probability vector containing the predicted probability that an image returns each of the 1000 ImageNet categories.  The dimensionality of the obtained output from passing `img_input` through the model is `(8, 1000)`.  The first value of `8` merely denotes that 8 images were passed through the network."
    ]
@@ -172,11 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -195,10 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### 3. Import the VGG-16 Model, with the Final Fully-Connected Layers Removed\n",
     "\n",
@@ -210,16 +192,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "58892288/58889256 [==============================] - 5s 0us/step\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -261,9 +241,9 @@
       "_________________________________________________________________\n",
       "block5_pool (MaxPooling2D)   (None, None, None, 512)   0         \n",
       "=================================================================\n",
-      "Total params: 14,714,688.0\n",
-      "Trainable params: 14,714,688.0\n",
-      "Non-trainable params: 0.0\n",
+      "Total params: 14,714,688\n",
+      "Trainable params: 14,714,688\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -276,10 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### 4. Extract Output of Final Max Pooling Layer\n",
     "\n",
@@ -289,11 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -309,10 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This is exactly how we calculate the bottleneck features for your project!"
    ]
@@ -320,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -334,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
